# Book-Review-NLP-Analytics

./: .gitignore  README.md  pyproject.toml
frontend/: ai_summary_functions.py  app.py  main.py  parquet_fixed.py  poc_queries.py  pyproject.toml  readme_frontend.md  requirements.txt
notebooks/: 01_eda_notebook_v3.ipynb  02_imputation_notebook.ipynb  03_notebook_sentiment_analysis.ipynb
src/preprocessing/: data_cleaner.py  data_imputation.py  load_data.py
