[project]
name = "Book_Review_NLP_Analytics"
version = "0.1.0"
description = ""
authors = [
    {name = "andrerizzo@hotmail.com",email = "andrerizzo@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
package-mode = false
requires-python = ">=3.12"
dependencies = [
    "pandas (>=2.3.0,<3.0.0)",
    "matplotlib (>=3.10.3,<4.0.0)",
    "seaborn (>=0.13.2,<0.14.0)",
    "ipykernel (>=6.29.5,<7.0.0)",
    "notebook (>=7.4.3,<8.0.0)",
    "jupyter-cjk-xelatex (>=0.2,<0.3)",
    "pandasql (>=0.7.3,<0.8.0)",
    "sentence-transformers (>=4.1.0,<5.0.0)",
    "nltk (>=3.9.1,<4.0.0)",
    "scikit-learn (>=1.7.0,<2.0.0)",
    "huggingface-hub[hf-xet] (>=0.33.0,<0.34.0)",
    "vadersentiment (>=3.3.2,<4.0.0)",
    "pyarrow (>=20.0.0,<21.0.0)",
    "fastparquet (>=2024.11.0,<2025.0.0)",
    "streamlit (>=1.46.0,<2.0.0)",
    "plotly (>=6.1.2,<7.0.0)",
    "ipywidgets (>=8.1.7,<9.0.0)",
    "gdown (>=5.2.0,<6.0.0)",
    "google (>=3.0.0,<4.0.0)",
    "dotenv (>=0.9.9,<0.10.0)",
    "openai (>=1.90.0,<2.0.0)",
    "ipython (>=9.3.0,<10.0.0)",
    "markdown (>=3.8.2,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
