[project]
name = "sentiment-analysis-frontend"
version = "0.1.0"
description = ""
authors = [
    {name = "andrerizzo@hotmail.com",email = "andrerizzo@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "streamlit (>=1.46.1,<2.0.0)",
    "plotly (>=6.2.0,<7.0.0)",
    "pandas (>=2.3.0,<3.0.0)",
    "gdown (>=5.2.0,<6.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
